Global Exception Handler, Activat/Inactivate category